--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phaser-ce-clock",
   "version": "1.0.0",
-  "description": "Phaser CE device information dump.",
+  "description": "Phaser CE analog digital clock.",
   "scripts": {
     "start": "parcel serve src/index.html --out-dir dev/",
     "build": "parcel build src/index.html --out-dir build/ --public-url ./"
